Migrate part of lit examples to use reactive property declaration to define context

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <title>wc-context demos</title>
-
 </head>
 
 <body>
   <ul>
-    <li><a href="lit-element-light-dom/index.html">Lit Light DOM</a> </li>
-    <li><a href="lit-element-shadow-dom/index.html">Lit Shadow DOM</a></li>
+    <li><a href="lit-light-dom/index.html">Lit Light DOM</a> </li>
+    <li><a href="lit-shadow-dom/index.html">Lit Shadow DOM</a></li>
   </ul>
 
 </body>
