Add lazy-data example

--- a/examples/index.html
+++ b/examples/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li><a href="lit-light-dom/index.html">Lit Light DOM</a> </li>
     <li><a href="lit-shadow-dom/index.html">Lit Shadow DOM</a></li>
+    <li><a href="lazy-data/index.html">Lazy context data</a></li>
   </ul>
 
 </body>
