--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,8 @@
   <ul>
     <li><a href="lit-light-dom/index.html">Lit Light DOM</a> </li>
     <li><a href="lit-shadow-dom/index.html">Lit Shadow DOM</a></li>
-    <li><a href="lazy-data/index.html">Lazy context data</a></li>
+    <li><a href="lazy-data/index.html">Lazy data (using ContextProvider class)</a></li>
+    <li><a href="dedicated-elements/index.html">Dedicated custom elements (context-provider | context-consumer)</a></li>
   </ul>
 
 </body>
