--- a/examples/dedicated-elements/index.html
+++ b/examples/dedicated-elements/index.html
@@ -6,10 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Context through custom elements</title>
-  <script type="module">
-    import './my-app.js'
-  </script>
-
+  <script type="module" src="my-app.js"></script>
 </head>
 
 <body>
