--- a/examples/index.html
+++ b/examples/index.html
@@ -8,10 +8,10 @@
 
 <body>
   <ul>
-    <li><a href="lit-light-dom/index.html">Lit Light DOM</a> </li>
-    <li><a href="lit-shadow-dom/index.html">Lit Shadow DOM</a></li>
+    <li><a href="lit-light-dom/index.html">Lit Demo</a> </li>
     <li><a href="lazy-data/index.html">Lazy data (reactive controllers)</a></li>
     <li><a href="dedicated-elements/index.html">Dedicated custom elements (context-provider | context-consumer)</a></li>
+    <li><a href="lit-shadow-dom/index.html">Provider in shadow dom with consumer in light dom (slotted)</a></li>
   </ul>
 
 </body>
