--- a/examples/lit-shadow-dom/index.html
+++ b/examples/lit-shadow-dom/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LitElement Shadow DOM</title>
-  <script src="src/index.js" type="module"></script>
+  <title>Provider in Shadow DOM / Consumer in Light DOM</title>
+  <script src="src/shadow-dom-example.js" type="module"></script>
 </head>
 
 <body>
-  <context-example></context-example>
+  <shadow-dom-example></shadow-dom-example>
 </body>
 
 </html>
