--- a/examples/lit-light-dom/index.html
+++ b/examples/lit-light-dom/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LitElement Light DOM</title>
-  <script src="src/index.js" type="module"></script>
+  <title>LitElement Context Demo</title>
+  <script src="src/context-example.js" type="module"></script>
 </head>
 
 <body>
